plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'Server-BE'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// build.gradle (Groovy 기준)
sourceSets {
    main {
        java {
            // Q클래스가 생성되는 위치를 소스 디렉토리에 추가
            srcDirs += 'build/generated/sources/annotationProcessor/java/main'
        }
    }
}


dependencies {
    /**
     * Web & UI Support
     */
    // Spring Web: RESTful API 개발을 위한 표준 MVC 프레임워크 (Tomcat 내장)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Spring WebFlux: 비동기 논블로킹(Non-blocking) 개발 및 WebClient 사용을 위함
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // SpringDoc OpenAPI: Swagger UI를 통해 API 문서를 자동 생성하고 테스트 화면 제공
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
    // Validation: 요청 파라미터 검증에 필요한 라이브러리를 제공한다.
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    /**
     * Database & Persistence (JPA & Querydsl)
     */
    // Spring Data JPA: 인터페이스 기반의 데이터베이스 연산(CRUD) 지원
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // MySQL Connector: MySQL 데이터베이스와 애플리케이션 연결을 위한 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Querydsl JPA: 타입 세이프(Type-Safe)한 동적 쿼리 작성을 지원 (Jakarta 사양)
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    // Querydsl APT: @Entity 기반으로 Q클래스를 생성하기 위한 어노테이션 프로세서
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    // Jakarta APIs: Querydsl과 JPA 호환성을 위한 표준 API 인터페이스
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    /**
     * Security & Authentication (OAuth2, JWT)
     */
    // Spring Security: 인증(Authentication) 및 인가(Authorization) 처리를 위한 핵심 보안 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // OAuth2 Client: 구글, 카카오 등 외부 소셜 로그인 연동 지원
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT (Java JWT): JWT 토큰의 생성, 파싱, 검증을 위한 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'          // JWT 인터페이스 및 정의
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'         // JWT 실제 구현체
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'      // JSON 처리를 위한 Jackson 연동

    // Redis (Lettuce 클라이언트 포함)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // #41 에서 서킷 브레이커 구현에 사용.
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0' // WebFlux(Mono) 지원용

    // Spring Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    /**
     * Boilerplate Code Reduction (Lombok)
     */
    // Lombok: Getter, Setter, Constructor 등을 어노테이션으로 자동 생성
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'

    /**
     * Testing Support
     */
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    // Spring Boot Test: 통합 테스트를 위한 기본 환경 및 라이브러리(JUnit5, AssertJ 등) 제공
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Reactor Test: WebFlux의 Mono, Flux 비동기 스트림 테스트 지원
    testImplementation 'io.projectreactor:reactor-test'
    // Security Test: Spring Security가 적용된 환경에서의 권한 기반 테스트 지원
    testImplementation 'org.springframework.security:spring-security-test'
    // JUnit Platform Launcher: 테스트 실행을 위한 JUnit 플랫폼 엔진
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // AWS SDK v2 - S3 (파일 업로드/다운로드용)
    implementation 'software.amazon.awssdk:s3:2.24.0' // 최신 버전에 맞게 조정하세요

    // AWS SDK v2 - SageMaker Runtime (추론 엔드포인트 호출용)
    implementation 'software.amazon.awssdk:sagemakerruntime:2.24.0'

    // Spring Cloud AWS SQS (Spring Boot 3.x 호환)
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.1.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
